src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnexpectedBundleType/InvalidUnexpectedBundleType.php
<?php

namespace Invalid\UnexpectedBundleType;

/**
 * Invalid because it doesn't extend the Claroline PluginBundle class.
 */
class InvalidUnexpectedBundleType
{
}